...
                                    <constraint firstAttribute="height" constant="36" id="EjF-Mg-zml"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Blacksword" family="Blacksword" pointSize="33"/>
                                <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="560" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Usuario" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gug-pE-3eH">
                                <rect key="frame" x="24" y="391" width="327" height="30"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="faV-AI-cdb"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="560" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Contraseña" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ggD-yZ-XO1">
                                <rect key="frame" x="24" y="429" width="327" height="30"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="password_textfield"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Zqb-4m-I4M"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="UNn-mA-CdM"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="INICIAR SESIÓN">
                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                    <color key="titleShadowColor" red="0.25607533840000002" green="0.14268903699999999" blue="0.00052973089950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="signInWithUsername:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qfj-5R-kiR"/>
                                    <segue destination="Kim-Wg-5BM" kind="showDetail" identifier="PerformSignIn" id="eZ1-DK-rOQ"/>
...
