...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sL7-u3-qjg">
                                        <rect key="frame" x="0.0" y="0.0" width="272" height="42"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="42" id="b0c-vf-vOn"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                        <state key="normal" title="EDITAR PERFIL">
                                            <color key="titleColor" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <segue destination="Fix-cn-3u1" kind="show" identifier="performProfileUpdate" id="p56-10-RzN"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yhl-BK-oqo">
                                        <rect key="frame" x="0.0" y="58" width="272" height="42"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="42" id="A5T-Jd-Yde"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                        <state key="normal" title="CERRAR SESIÓN">
                                            <color key="titleColor" red="0.91764705879999997" green="0.36470588240000001" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="signOutUser:" destination="l41-gR-0Sj" eventType="touchUpInside" id="WFi-QR-Usf"/>
                                        </connections>
                                    </button>
...
            <point key="canvasLocation" x="3560.625" y="601.05633802816897"/>
        </scene>
        <!--Perfil-->
        <scene sceneID="CsS-dq-mxW">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AcK-Jb-6c6" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Perfil" image="item_profile" id="3eY-Mt-m3T"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="vx5-wW-2e8">
                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" red="0.91764705879999997" green="0.36470588240000001" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
...
