...
                            <constraint firstItem="sxg-na-s49" firstAttribute="top" secondItem="p5l-3g-gGI" secondAttribute="bottom" id="lQ6-C6-8yp"/>
                            <constraint firstItem="0eC-NL-3Hk" firstAttribute="leading" secondItem="x6C-hy-eLz" secondAttribute="leading" id="tKU-i3-J4b"/>
                            <constraint firstItem="LMQ-O9-YNh" firstAttribute="top" secondItem="sxg-na-s49" secondAttribute="bottom" id="v3L-es-hRP"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="lam-BS-n81">
                        <barButtonItem key="leftBarButtonItem" title="Cancelar" id="dWj-ga-eIP">
                            <color key="tintColor" red="0.91764705879999997" green="0.36470588240000001" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="cancelEdittingCheckin:" destination="cHO-lH-kyL" id="ePg-Oj-rYi"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
            <point key="canvasLocation" x="3765.5999999999999" y="624.38423645320199"/>
        </scene>
        <!--Check-In-->
        <scene sceneID="Hbh-Fv-bc2">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Som-Sp-3kd" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Check-In" image="item_check_in" id="Shy-qk-hp2"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mL0-CX-gKW">
                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" red="0.91764705879999997" green="0.36470588240000001" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
                    </navigationBar>
...
